# flexops-sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flexops/: __init__.py  _errors.py  _http.py  _types.py  client.py
src/flexops/resources/: __init__.py  analytics.py  api_keys.py  auth.py  carriers.py  email_templates.py  hs_codes.py  insurance.py  inventory.py  offsets.py  orders.py  pickups.py  recurring_shipments.py  reports.py  returns.py  rules.py  scan_forms.py  shipping.py  wallet.py  webhooks.py  workspaces.py
tests/: conftest.py  test_auth.py  test_carriers.py  test_client.py  test_errors.py  test_shipping.py  test_webhooks.py
